--- a/todoListBackend/public/css/landingPageStyle.css
+++ b/todoListBackend/public/css/landingPageStyle.css
@@ -1,8 +1,32 @@
-button{
-    width: 200px;
-    margin-bottom: 10px;
-    height: 50px;
+body
+{
+    background-image: url("/img/todoBackground.jpg"); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-a{
+
+button {
+    width: 500px;
+    margin-bottom: 10px;
+    height: 100px;
+}
+
+a {
     color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: white;
+    text-decoration: none;
+}
+
+.card {
+    height: 350px;
+    background-color: rgb(0,0, 0,.2);
+  
+}
+
+center {
+    margin-top: 15%;
 }
